add picture to databases

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,13 +22,11 @@
     "@types/leaflet": "^1.9.8",
     "@types/node": "^20.9.0",
     "leaflet": "^1.9.4",
+    "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
-    "zone.js": "~0.14.2",
-    "typescript": "~5.2.2"
-  },
-  "devDependencies": {
-
+    "typescript": "~5.2.2",
+    "zone.js": "~0.14.2"
   }
 }
